--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@portabletext/react": "^6.0.2",
+    "@sanity/client": "^7.16.0",
+    "@sanity/image-url": "^2.0.3",
+    "@sanity/vision": "^5.12.0",
     "@supabase/supabase-js": "^2.97.0",
     "@tailwindcss/typography": "^0.5.19",
     "clsx": "^2.1.1",
@@ -18,12 +22,14 @@
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^10.1.1",
     "next": "16.1.6",
+    "next-sanity": "^12.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
+    "sanity": "^5.12.0",
     "tailwind-merge": "^3.4.1",
     "zod": "^4.3.6"
   },
